[gd_scene load_steps=35 format=2]

[ext_resource path="res://content/weapons/laser/laser_variations/visual_laser.gd" type="Script" id=1]
[ext_resource path="res://content/weapons/laser/laser_variations/laser_particle0.png" type="Texture" id=2]
[ext_resource path="res://content/weapons/laser/laser_variations/laser.gdshader" type="Shader" id=3]
[ext_resource path="res://content/weapons/laser/muzzleflash.png" type="Texture" id=4]
[ext_resource path="res://content/weapons/laser/small-burst.png" type="Texture" id=5]
[ext_resource path="res://content/weapons/laser/laserend-small.png" type="Texture" id=6]
[ext_resource path="res://systems/style/palettes/index_palette.png" type="Texture" id=7]
[ext_resource path="res://content/weapons/laser/laser_variations/hit_particle_gradient.tres" type="Texture" id=8]
[ext_resource path="res://content/sounds/Weapons/Laser/sfx_heavy_impact.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/Weapons/Laser/mani amb4_1.wav" type="AudioStream" id=10]
[ext_resource path="res://content/sounds/Weapons/Laser/laser_init_0_add.wav" type="AudioStream" id=11]
[ext_resource path="res://content/sounds/Weapons/Laser/laser_loop_0.wav" type="AudioStream" id=12]
[ext_resource path="res://systems/audio/Sound.gd" type="Script" id=13]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=14]
[ext_resource path="res://content/sounds/Weapons/Laser/laser_init_1.wav" type="AudioStream" id=15]
[ext_resource path="res://content/sounds/Combat Punch 5.wav" type="AudioStream" id=16]
[ext_resource path="res://content/sounds/Weapons/Laser/grid Off.wav" type="AudioStream" id=17]

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/power = 0.0
shader_param/speed = 4.867
shader_param/palette = ExtResource( 7 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "glow",
"speed": 24.0
} ]

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 44 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": false,
"name": "kapow",
"speed": 12.0
} ]

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 9, 7 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 6 )
region = Rect2( 9, 0, 9, 7 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 6 )
region = Rect2( 18, 0, 9, 7 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 6 )
region = Rect2( 27, 0, 9, 7 )

[sub_resource type="SpriteFrames" id=50]
animations = [ {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="ParticlesMaterial" id=53]
lifetime_randomness = 0.3
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, -5, 0 )
initial_velocity = 68.4
initial_velocity_random = 0.29
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 40.0
color_ramp = ExtResource( 8 )

[node name="Laser" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0.5, 0 )
rotation = -1.57365
texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -16 )
region_enabled = true
region_rect = Rect2( 16, 32, 100, 32 )

[node name="MuzzleFlash" type="AnimatedSprite" parent="."]
position = Vector2( 0.5, -5.5 )
frames = SubResource( 38 )
animation = "glow"

[node name="Burst" type="AnimatedSprite" parent="."]
position = Vector2( 0, -39 )
frames = SubResource( 39 )
animation = "kapow"

[node name="HitEffect" type="AnimatedSprite" parent="."]
position = Vector2( 0, -100 )
z_index = 7
frames = SubResource( 50 )
frame = 1
playing = true

[node name="HitParticles" type="Particles2D" parent="."]
position = Vector2( 0, -100 )
z_index = 1
amount = 30
lifetime = 0.4
local_coords = false
process_material = SubResource( 53 )

[node name="FireMonsterHit" parent="." instance=ExtResource( 14 )]
stream = ExtResource( 10 )
bus = "World"
randomVolume = 0.0
randomPitch = 0.0

[node name="FireMonsterBump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "World"
script = ExtResource( 13 )

[node name="FireSound" parent="." instance=ExtResource( 14 )]
stream = ExtResource( 12 )
volume_db = -17.681
pitch_scale = 1.07
bus = "Weapon"
randomVolume = 0.0
randomPitch = 0.0

[node name="FireSoundInit" type="AudioStreamPlayer" parent="."]
volume_db = -8.951
bus = "Sounds"
script = ExtResource( 13 )
streams = [ ExtResource( 15 ) ]

[node name="FireSoundInit2" type="AudioStreamPlayer" parent="FireSoundInit"]
volume_db = -21.197
pitch_scale = 0.78
bus = "Sounds"
script = ExtResource( 13 )
streams = [ ExtResource( 11 ) ]

[node name="FireSoundStop" type="AudioStreamPlayer" parent="."]
volume_db = -13.758
pitch_scale = 1.25
bus = "Sounds"
script = ExtResource( 13 )
streams = [ ExtResource( 16 ) ]

[node name="FireSoundStop2" type="AudioStreamPlayer" parent="FireSoundStop"]
volume_db = 3.721
pitch_scale = 1.13
bus = "Sounds"
script = ExtResource( 13 )
streams = [ ExtResource( 17 ) ]
